[project]
name = "llm-workflows"
version = "0.1.0"
description = "Python workflows wrapper for the llm CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "llm>=0.12.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workflows"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto" 